# Neoneuron

./: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build-appimage.py  build-appimage.sh  vcpkg.json
src/: CMakeLists.txt  neoneuron.cpp
src/neoneuron/: Types.h  neoneuron.cpp
src/neoneuron/application/: NeoneuronApplication.cpp  NeoneuronApplication.h  NeoneuronDefaults.cpp  NeoneuronDefaults.h
src/neoneuron/filesystem/: NeoneuronFiles.cpp  NeoneuronFiles.h
src/neoneuron/loader/: Loader.cpp  Loader.h  LoaderCollection.cpp  LoaderCollection.h  LoaderData.cpp  LoaderData.h  SWCLoader.cpp  SWCLoader.h  SceneLoader.cpp  SceneLoader.h  XMLLoader.cpp  XMLLoader.h
src/neoneuron/render/: AbstractNeuronRepresentation.h  AbstractNeuronScene.h  AbstractSelector.h  ChangeProcessor.cpp  ChangeProcessor.h  GPUNeuron.cpp  GPUNeuron.h  NeoneuronRender.cpp  NeoneuronRender.h  NeoneuronRenderData.h  NeuronScene.cpp  NeuronScene.h  NeuronSelector.cpp  NeuronSelector.h  TimeAware.h  Timeline.cpp  Timeline.h  Uniforms.h  Viewport.cpp  Viewport.h
src/neoneuron/render/activity/: ActivityGPUNeuron.cpp  ActivityGPUNeuron.h  ActivityRepresentation.cpp  ActivityRepresentation.h
src/neoneuron/render/complex/: ComplexGPUNeuron.cpp  ComplexGPUNeuron.h  ComplexNeuronRepresentation.cpp  ComplexNeuronRepresentation.h  ComplexNeuronScene.cpp  ComplexNeuronScene.h  ComplexNeuronSelector.cpp  ComplexNeuronSelector.h
src/neoneuron/render/component/: GlobalParametersUpdaterComponent.cpp  GlobalParametersUpdaterComponent.h  LockMouseComponent.cpp  LockMouseComponent.h
src/neoneuron/render/component/camera/: CameraController.cpp  CameraController.h  CameraData.cpp  CameraData.h  CameraInterpolator.cpp  CameraInterpolator.h  Guide.cpp  Guide.h  InstantCameraInterpolator.cpp  InstantCameraInterpolator.h  OrbitalCameraController.cpp  OrbitalCameraController.h
src/neoneuron/render/extension/: ShaderExtension.h
src/neoneuron/render/extension/neuron/: ActivityNeuronColorAndScaleSE.cpp  ActivityNeuronColorAndScaleSE.h  NeuronColorAndScaleSE.h  StaticNeuronColorAndScaleSE.cpp  StaticNeuronColorAndScaleSE.h
src/neoneuron/render/particle/: ParticleGPUNeuron.cpp  ParticleGPUNeuron.h  ParticleNeuronRepresentation.cpp  ParticleNeuronRepresentation.h
src/neoneuron/render/simple/: SimpleGPUNeuron.cpp  SimpleGPUNeuron.h  SimpleNeuronScene.cpp  SimpleNeuronScene.h  SimpleNeuronSelector.cpp  SimpleNeuronSelector.h
src/neoneuron/render/synapse/: GPUSynapse.cpp  GPUSynapse.h  GPUSynapseCreateInfo.cpp  GPUSynapseCreateInfo.h  SynapseRepresentation.cpp  SynapseRepresentation.h
src/neoneuron/structure/: GID.cpp  GID.h  Identifiable.cpp  Identifiable.h  NamedDataset.cpp  NamedDataset.h  Neuron.cpp  Neuron.h  NeuronSegment.cpp  NeuronSegment.h  NeuronTransform.cpp  NeuronTransform.h  Repository.cpp  Repository.h  RepositoryView.cpp  RepositoryView.h  Selector.cpp  Selector.h  Storage.h
src/neoneuron/structure/complex/: ComplexJoint.cpp  ComplexJoint.h  ComplexNeuron.cpp  ComplexNeuron.h  ComplexNeuronSegment.cpp  ComplexNeuronSegment.h  ComplexSoma.cpp  ComplexSoma.h
src/neoneuron/structure/property/: DefaultProperties.cpp  DefaultProperties.h  DefinedProperty.cpp  DefinedProperty.h  PropertyStorage.cpp  PropertyStorage.h
src/neoneuron/structure/prototype/: NeuronProperties.h  PrototypeNeuron.cpp  PrototypeNeuron.h  PrototypeNeuronSegment.cpp  PrototypeNeuronSegment.h
src/neoneuron/structure/simple/: SimpleNeuron.cpp  SimpleNeuron.h  SimpleNeuronSegment.cpp  SimpleNeuronSegment.h
src/neoneuron/ui/: NeoneuronDockSpaceComponent.cpp  NeoneuronDockSpaceComponent.h  NeoneuronRender.cpp  NeoneuronRender.h  NeoneuronTopBar.cpp  NeoneuronTopBar.h  NeoneuronUI.cpp  NeoneuronUI.h  NeoneuronWindow.cpp  NeoneuronWindow.h
src/neoneuron/ui/components/: ModalComponent.cpp  ModalComponent.h  NeoneuronBottomBar.cpp  NeoneuronBottomBar.h  NeoneuronUIAbout.cpp  NeoneuronUIAbout.h  NeoneuronUIGlobalParameters.cpp  NeoneuronUIGlobalParameters.h  NeoneuronUINeuronList.cpp  NeoneuronUINeuronList.h  NeoneuronUINodeEditor.cpp  NeoneuronUINodeEditor.h  NeoneuronUIOpenFile.cpp  NeoneuronUIOpenFile.h  NeoneuronUIPerformanceRecorder.cpp  NeoneuronUIPerformanceRecorder.h  NeuronTexturePicker.cpp  NeuronTexturePicker.h  ToolWindow.cpp  ToolWindow.h
src/neoneuron/ui/components/actions/: ActionDuplicate.cpp  ActionDuplicate.h  ActionSave.cpp  ActionSave.h  ActionShuffle.cpp  ActionShuffle.h
src/neoneuron/ui/components/nodes/: ActivityColorAndScaleNode.cpp  ActivityColorAndScaleNode.h  ActivityRepresentationNode.cpp  ActivityRepresentationNode.h  CameraNode.cpp  CameraNode.h  DatasetNode.cpp  (+25 more)
src/neoneuron/ui/editor/: Editors.cpp  Editors.h
src/neoneuron/ui/imgui/: ImGuiCustomComponents.cpp  ImGuiCustomComponents.h
src/neoneuron/ui/settings/: NeoneuronUiSettings.cpp  NeoneuronUiSettings.h
src/neoneuron/ui/style/: DynamicColorPalette.cpp  DynamicColorPalette.h  Fonts.cpp  Fonts.h  MaterialSymbols.h  NodeStyles.h  Themes.h
src/neoneuron/util/: ColorUtils.cpp  ColorUtils.h  VersionTracker.h
src/resources/: imgui.ini  mesh_base.mesh  mesh_super_base.mesh  neuron.frag  neuron.mesh  neuron_beta.mesh  render.json  test.swc
src/resources/model/guide/: guide.json  plane_guide.json  point_guide.json  sphere_guide.json
src/resources/model/selector/: selector_resolver.json
src/resources/shader/activity/: activity.frag  activity.mesh  activity.task
src/resources/shader/guide/: guide.json  plane_guide.frag  plane_guide.json  plane_guide.vert  point_guide.frag  point_guide.json  point_guide.vert  sphere_guide.frag  sphere_guide.json  sphere_guide.vert
src/resources/shader/neuron/: neuron.frag  neuron.mesh  neuron.task
src/resources/shader/selector/: selector_resolver.frag  selector_resolver.json  selector_resolver.vert
src/resources/shader/synapse/: synapse.frag  synapse.mesh  synapse.task
src/resources/swc/: GA02326c1n2-2.CNG.swc  GA02327c1.CNG.swc  bigScene.xml  bigScene2.xml  data.swc  test.swc
src/resources/texture/skybox/: skybox.json
src/resources/texture/white_skybox/: skybox.json
(+21 files in other folders)
